# ferro

./: .gitignore  Doxyfile  README.md  doxyfile  meson.build
include/: array.h  common.h  fetch.h  page.h  scene.h
resources/fonts/: ferro_mono.sfd
source/: array.c  fetch.c  main.c  page.c  scene.c
src/: fetcher.cpp  fetcher.h  main.cpp  node.cpp  node.h  shader.cpp  shader.h  text.cpp  text.h  window.cpp  window.h
src/shader/: fragment.fs  node.fs  node.vs  text.fs  text.vs  vertex.vs
